tests/compliance/invalid/05-contract-no-id.alp
!alp-version: 3.0.0

@contract
  description: "Contract missing required id field"
  allows:
    - "api.*"
